# CubicSplinePackage

./: README.md  pyproject.toml
src/cubic_spline_package/: convert_text.py  cspline.py  cubic_spline_eval.py  cubicspline.py  prog.py
