[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cspline_package"
version = "0.0.2"
authors = [
  { name="Roisin Braddell", email="braddelr@tcd.ie" },
]
description = "A package which computes the cubic spline and returns the result at a specified grid."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

